# grpc_fdw

./: .gitignore  Cargo.toml  README.md  build.rs  grpc_fdw.control
.github/workflows/: ci.yml
fdw_server/: Cargo.toml  build.rs
fdw_server/src/: main.rs
proto/: pg_fdw.proto
src/: client.rs  lib.rs  oid.rs  proto_value.rs  rs.rs
src/echo_server/: server.rs
