[package]
name = "grpc_fdw"
version = "0.0.0"
edition = "2018"
authors = ["Simon Thörnqvist <simon.thornqvist@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg_test = []

[dependencies]
pgx = "0.1.18"
pgx-fdw = { git = "https://github.com/drowzy/pgx_fdw.git" }
pgx-macros = "0.1.18"
tonic = "0.4"
prost = "0.7"
prost-types = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
pgx-tests = "0.1.18"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.deb]
name = "grpc_fdw"
maintainer = "Simon Thörnqvist <simon.thornqvist@gmail.com>"
copyright = "2021, Simon Thörnqvist <sanderhahn@gmail.com>"
extended-description = "GRPC Foreign Data Wrappers for PostgreSQL"
depends = "$auto"
section = "database"
priority = "optional"
assets = [
    ["target/release/grpc_fdw-pg13/usr/lib/postgresql/13/lib/grpc_fdw.so", "usr/lib/postgresql/13/lib/", "644"],
    ["target/release/grpc_fdw-pg13/usr/share/postgresql/13/extension/grpc_fdw.control", "usr/share/postgresql/13/extension/", "644"],
    ["target/release/grpc_fdw-pg13/usr/share/postgresql/13/extension/grpc_fdw--1.0.sql", "usr/share/postgresql/13/extension/", "644"],
]