[package]
name = "fdw_server"
version = "0.1.0"
authors = ["Simon Thörnqvist <simon.thornqvist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fdw-server"
path = "src/main.rs"

[dependencies]
tonic = "0.4"
tokio-stream = { version =  "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.7"
prost-types = "0.7.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"